--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: Titan Flutter application.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -31,9 +31,11 @@ dependencies:
   dio: ^2.1.5
   rxdart: ^0.22.0
   #https://pub.dev/packages/package_info
-#  package_info: ^0.4.0+3
+  #  package_info: ^0.4.0+3
   #https://github.com/baseflowit/flutter-permission-handler
-#  permission_handler: '^3.0.0'
+  #  permission_handler: '^3.0.0'
+  toast: ^0.1.4
+  flutter_webview_plugin: ^0.3.5
   mapbox_gl:
     path: ./vendor/mapbox_flutter
   titan_plugin:
@@ -59,9 +61,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
+  assets:
+    - res/drawable/ic_logo.png
+    - res/drawable/logo_title.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -74,12 +76,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+   - family: iconfont
+     fonts:
+       - asset: res/fonts/iconfont.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
