--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,8 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 android/apk
+android/.project
+android/.settings/org.eclipse.buildship.core.prefs
+android/app/.classpath
+android/app/.project
+android/app/.settings
