--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,6 +23,8 @@ if (flutterVersionName == null) {
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
 android {
@@ -34,6 +36,10 @@ android {
 
     lintOptions {
         disable 'InvalidPackage'
+    }
+
+    dataBinding {
+        enabled = true
     }
 
     defaultConfig {
@@ -111,6 +117,31 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation (name:'cipher', ext:'aar')
+
+    implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta1"
+
+    implementation "io.reactivex.rxjava2:rxjava:2.2.6"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+
+    implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.6'
+
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    //anko
+    implementation "org.jetbrains.anko:anko:0.10.8"
+    //https://github.com/trello/RxLifecycle
+    implementation 'com.trello.rxlifecycle3:rxlifecycle:3.0.0'
+    // If you want to bind to Android-specific lifecycles
+    implementation 'com.trello.rxlifecycle3:rxlifecycle-android:3.0.0'
+    // If you want pre-written Activities and Fragments you can subclass as providers
+    implementation 'com.trello.rxlifecycle3:rxlifecycle-components:3.0.0'
+    // If you want to use Android Lifecycle for providers
+    implementation 'com.trello.rxlifecycle3:rxlifecycle-android-lifecycle:3.0.0'
+    // If you want to use Kotlin syntax
+    implementation 'com.trello.rxlifecycle3:rxlifecycle-kotlin:3.0.0'
+    // If you want to use Kotlin syntax with Android Lifecycle
+    implementation 'com.trello.rxlifecycle3:rxlifecycle-android-lifecycle-kotlin:3.0.0'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
