--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,12 @@ dependencies:
   path_provider: ^1.1.0
   #https://pub.dev/packages/qr_flutter#-installing-tab-
   qr_flutter: ^2.0.0+51
+  #https://pub.dev/packages/sqflite#-installing-tab-
+  sqflite: ^1.1.5
+  #https://pub.dev/packages/shared_preferences#-installing-tab-
+  shared_preferences: ^0.5.3+1
+  #https://pub.dev/packages/bloc_pattern#-readme-tab-
+  bloc_pattern: ^2.1.9+3
   mapbox_gl:
     path: ./vendor/mapbox_flutter
 #  titan_plugin:
