--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,19 @@ dependencies:
 
   #https://github.com/flutterchina/dio
   dio: ^2.1.5
-#  rxdart: ^0.22.0  #flutter_bloc have it
   #https://pub.dev/packages/package_info
-#  package_info: ^0.4.0+4
+  package_info: ^0.4.0+4
   #https://github.com/baseflowit/flutter-permission-handler
   permission_handler: '^3.1.0'
-  toast: ^0.1.4
+  #https://pub.dev/packages/event_bus#-installing-tab-
+  event_bus: ^1.1.0
+  #https://pub.dev/packages/fluttertoast
+  fluttertoast: ^3.1.0
   flutter_webview_plugin: ^0.3.5
+  #https://github:com/dnfield/flutter_svg:
+  flutter_svg: ^0.13.0+2
+  #https://pub.dev/packages/in_app_purchase#-installing-tab-
+  in_app_purchase: ^0.2.0+6
   #https://github.com/apptreesoftware/flutter_barcode_reader
 #  barcode_scan: ^1.0.0
   #https://pub.dev/packages/path_provider#-installing-tab-
@@ -46,15 +52,17 @@ dependencies:
   sqflite: ^1.1.5
   #https://pub.dev/packages/shared_preferences#-installing-tab-
   shared_preferences: ^0.5.3+1
-  #https://pub.dev/packages/bloc_pattern#-readme-tab-
-#  bloc_pattern: ^2.1.9+3
   #https://pub.dev/packages/flutter_bloc
   flutter_bloc: ^0.15.1
   #https://pub.dev/packages/equatable#-readme-tab-
   equatable: ^0.2.6
+  #https://pub.dev/packages/flutter_bugly#-installing-tab-
+  flutter_bugly: ^0.2.3+1
+  #https://pub.dev/packages/logger#-installing-tab-
+  logger: ^0.7.0+2
   #https://github.com/tobrun/flutter-mapbox-gl
   mapbox_gl:
-    path: ./vendor/mapbox_flutter
+    path: ../mapbox_flutter
   #https://github.com/dart-lang/json_serializable
   json_annotation: ^2.4.0
 
