modify left drawer

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,4 @@ android/.settings/org.eclipse.buildship.core.prefs
 android/app/.classpath
 android/app/.project
 android/app/.settings
+Podfile.lock
