--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   flutter_bugly: ^0.2.3+1
   #https://pub.dev/packages/logger#-installing-tab-
   logger: ^0.7.0+2
+  #https://pub.dev/packages/flutter_statusbarcolor#-installing-tab-
+  flutter_statusbarcolor: ^0.2.1
   #https://github.com/tobrun/flutter-mapbox-gl
   mapbox_gl:
     path: ../mapbox_flutter
