add share app image to other application

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
     path: ../mapbox_flutter
   #https://github.com/dart-lang/json_serializable
   json_annotation: ^2.4.0
+  esys_flutter_share: 1.0.2
 
 dev_dependencies:
   flutter_test:
