--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.apptreesoftware.barcodescan.BarcodeScannerActivity"/>
         <activity
             android:name=".business.qrcode.QRCodeScanActivity"
             android:screenOrientation="portrait" />
