--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,7 @@ dependencies:
   #https://pub.dev/packages/equatable#-readme-tab-
   equatable: ^0.2.6
   #https://pub.dev/packages/flutter_bugly#-installing-tab-
-  flutter_bugly: ^0.2.3+1
+  #flutter_bugly: ^0.2.3+1
   #https://pub.dev/packages/logger#-installing-tab-
   logger: ^0.7.0+2
   #https://pub.dev/packages/flutter_statusbarcolor#-installing-tab-
