--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   intro_slider: ^2.2.6
   #https://pub.dev/packages/barcode_scan
   barcode_scan: 1.0.0
+  #https://pub.dev/packages/flutter_downloader/versions/0.0.6#-installing-tab-
+  flutter_downloader: ^1.1.7
   #https://github.com/tobrun/flutter-mapbox-gl
   mapbox_gl:
     path: ../mapbox_flutter
