--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: Titan Flutter application.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.1+2
+version: 1.0.2+3
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -43,7 +43,7 @@ dependencies:
   #https://pub.dev/packages/in_app_purchase#-installing-tab-
   in_app_purchase: ^0.2.0+6
   #https://github.com/apptreesoftware/flutter_barcode_reader
-#  barcode_scan: ^1.0.0
+  #  barcode_scan: ^1.0.0
   #https://pub.dev/packages/path_provider#-installing-tab-
   path_provider: ^1.1.0
   #https://pub.dev/packages/qr_flutter#-installing-tab-
@@ -74,6 +74,8 @@ dependencies:
   barcode_scan: 1.0.0
   #https://pub.dev/packages/flutter_downloader/versions/0.0.6#-installing-tab-
   flutter_downloader: ^1.1.7
+  #https://pub.dev/packages/flutter_html:
+  flutter_html: ^0.10.4
   #https://github.com/tobrun/flutter-mapbox-gl
   mapbox_gl:
     path: ../mapbox_flutter
@@ -125,9 +127,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-   - family: iconfont
-     fonts:
-       - asset: res/fonts/iconfont.ttf
+    - family: iconfont
+      fonts:
+        - asset: res/fonts/iconfont.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
