--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,14 +51,24 @@
 	<string>pk.eyJ1IjoibnVyYm90IiwiYSI6ImNpaG0ycXA3czBvamh2NWtsZzBzdHE2dmQifQ.B7NiVcQD0DFguQF1aRcOeQ</string>
 	<key>MGLMapboxMetricsEnabledSettingShownInApp</key>
 	<true/>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Please allow obtain location permission</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Please allow obtain location permission</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Please allow obtain location permission</string>
+    <key>NSMotionUsageDescription</key>
+    <string>Please allow obtain motion permission</string>
+    <key>NSAppleMusicUsageDescription</key>
+    <string>Please allow obtain media library permission</string>
+    <key>NSCalendarsUsageDescription</key>
+    <string>Please allow obtain calendars permission</string>
+    <key>NSContactsUsageDescription</key>
+    <string>Please allow obtain contacts permission</string>
+    <key>NSSpeechRecognitionUsageDescription</key>
+    <string>Please allow obtain speech recognition permission</string>
 	<key>NSCameraUsageDescription</key>
-	<string>允许使用相机扫描二维码</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>允许访问一下位置</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string></string>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>允许访问位置1</string>
+	<string>Please allow obtain camera permission</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
