--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,11 +3,16 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:3.2.1'
+        classpath 'io.fabric.tools:gradle:1.26.1'
     }
 }
 
@@ -15,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+
     }
 }
 
