--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   #https://github:com/dnfield/flutter_svg:
   flutter_svg: ^0.13.0+2
   #https://pub.dev/packages/in_app_purchase#-installing-tab-
-  in_app_purchase: ^0.2.0+6
+  in_app_purchase: ^0.2.1+3
   #https://github.com/apptreesoftware/flutter_barcode_reader
   #  barcode_scan: ^1.0.0
   #https://pub.dev/packages/path_provider#-installing-tab-
@@ -82,12 +82,20 @@ dependencies:
   mapbox_gl:
     path: ../mapbox_flutter
 
+  #fire base 全家桶
+  firebase_core: ^0.4.0
+  firebase_crashlytics: ^0.1.0
+  firebase_analytics: ^5.0.0
+  #https://pub.dev/packages/floor
+  floor: ^0.7.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^1.0.0
+  build_runner: ^1.6.7
   json_serializable: ^3.1.0
+  floor_generator: ^0.7.0
 
   #https://github.com/dart-lang/mockito
   mockito: ^4.0.0
@@ -119,6 +127,8 @@ flutter:
     - res/drawable/map_layer.svg
     - res/drawable/empty_box.svg
     - res/drawable/shop_car.svg
+    - res/drawable/alipay.svg
+    - res/drawable/google_play.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
