--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   event_bus: ^1.1.0
   #https://pub.dev/packages/fluttertoast
   fluttertoast: ^3.1.0
-  flutter_webview_plugin: ^0.3.5
+#  flutter_webview_plugin: ^0.3.5
   #https://github:com/dnfield/flutter_svg:
   flutter_svg: ^0.13.0+2
   #https://pub.dev/packages/in_app_purchase#-installing-tab-
