--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -44,7 +44,7 @@ android {
 
     defaultConfig {
         applicationId "org.hyn.titan"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -91,6 +91,10 @@ android {
         }
     }
 
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -135,6 +139,13 @@ dependencies {
     implementation 'com.trello.rxlifecycle3:rxlifecycle-kotlin:3.0.0'
     // If you want to use Kotlin syntax with Android Lifecycle
     implementation 'com.trello.rxlifecycle3:rxlifecycle-android-lifecycle-kotlin:3.0.0'
+
+    //trust wallet core
+    implementation ('com.trustwallet.walletcore:walletcore:0.10.0') {
+        exclude group: 'com.google.guava'
+    }
+    //web3j
+    implementation 'org.web3j:core:4.5.0'
 
 
     testImplementation 'junit:junit:4.12'
