--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ dependencies:
   rxdart: 0.22.2
   #https://pub.dev/packages/url_launcher
   url_launcher: 5.1.2
+  decimal: ^0.3.5
 
 dev_dependencies:
   flutter_test:
