--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,6 +93,8 @@ dependencies:
   #https://pub.dev/packages/url_launcher
   url_launcher: 5.1.2
   decimal: ^0.3.5
+  #https://pub.dev/packages/carousel_pro
+  carousel_pro: ^1.0.0
   web3dart: ^1.1.1
 
 dev_dependencies:
