--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,7 @@ dependencies:
   web3dart: ^1.1.1
   intl: 0.15.8
   webview_flutter: ^0.3.14+1
+  pull_to_refresh: ^1.5.6
 
 dev_dependencies:
   flutter_test:
