modify package name and app name

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -43,7 +43,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "org.hyn.titan"
+        applicationId "org.maprich.maprich"
         minSdkVersion 23
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
