--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - res/drawable/ic_dmap_bar.png
+    - res/drawable/ic_dmap_location_share.png
+    - res/drawable/ic_dmap_mbassy.png
+    - res/drawable/ic_dmap_police.png
     - res/drawable/ic_hyperion.png
     - res/drawable/ic_bank.png
     - res/drawable/ic_cybercafe.png
