--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -162,6 +162,8 @@ flutter:
     - res/drawable/cloud_1.png
     - res/drawable/cloud_2.png
     - res/drawable/cloud_3.png
+    - res/drawable/get_power.png
+    - res/drawable/node_mortgage.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
