--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -167,6 +167,7 @@ flutter:
     - res/drawable/node_mortgage.png
     - res/drawable/node_icon.png
     - res/drawable/email_icon.png
+    - res/drawable/map3_node_introduction.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
