--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ dependencies:
   intl: 0.15.8
   webview_flutter: ^0.3.14+1
   pull_to_refresh: ^1.5.6
+  carousel_slider: ^1.3.1
 
 
 dev_dependencies:
