--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,7 +93,7 @@ dependencies:
   web3dart: ^1.1.1
   intl: 0.15.8
   webview_flutter: ^0.3.14+1
-  pull_to_refresh: ^1.5.6
+  pull_to_refresh: ^1.5.7
   carousel_slider: ^1.3.1
 
 
@@ -122,6 +122,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - res/drawable/load_fail.png
+    - res/drawable/empty_data.png
     - res/drawable/img_placeholder.jpg
     - res/drawable/ic_dmap_bar.png
     - res/drawable/ic_dmap_location_share.png
