--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,6 +95,7 @@ dependencies:
   webview_flutter: ^0.3.14+1
   pull_to_refresh: ^1.5.7
   carousel_slider: ^1.3.1
+  fake_cookie_manager: ^0.1.0
 
 
 dev_dependencies:
