--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ dependencies:
   pull_to_refresh: ^1.5.7
   carousel_slider: ^1.3.1
   fake_cookie_manager: ^0.1.0
+  loading: ^1.0.1
 
 
 dev_dependencies:
