--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 .buildlog/
 .history
 .svn/
+apks
 
 # IntelliJ related
 *.iml
@@ -79,3 +80,5 @@ Podfile.lock
 ios/Podfile.lock
 pubspec.lock
 .symlinks
+pMapping.txt
+shrinklist.txt
