--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,8 @@ dependencies:
   carousel_slider: ^1.3.1
   fake_cookie_manager: ^0.1.0
   loading: ^1.0.1
+  #https://pub.flutter-io.cn/packages/flutter_bugly
+  flutter_bugly: 0.2.7
 
 
 dev_dependencies:
