--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,7 +73,7 @@ dependencies:
   #https://pub.dev/packages/barcode_scan
   barcode_scan: 1.0.0
   #https://pub.dev/packages/flutter_downloader/versions/0.0.6#-installing-tab-
-  flutter_downloader: ^1.1.7
+  #flutter_downloader: ^1.1.7
   #https://pub.dev/packages/flutter_html:
   flutter_html: ^0.11.0
   #https://pub.dev/packages/sprintf
