[Add] add Customer service + Edit directlyPower

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -179,6 +179,7 @@ flutter:
     - res/drawable/map3_node_introduction.jpeg
     - res/drawable/map_rich_application.png
     - res/drawable/discover_first_image.jpeg
+    - res/drawable/customer_service.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
