--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   #https://github:com/dnfield/flutter_svg:
   flutter_svg: ^0.13.0+2
   #https://pub.dev/packages/in_app_purchase#-installing-tab-
-  in_app_purchase: ^0.2.2+1
+  #  in_app_purchase: 0.2.2+2
   #https://github.com/apptreesoftware/flutter_barcode_reader
   #  barcode_scan: ^1.0.0
   #https://pub.dev/packages/path_provider#-installing-tab-
@@ -63,7 +63,7 @@ dependencies:
   #https://pub.dev/packages/flutter_statusbarcolor#-installing-tab-
   flutter_statusbarcolor: 0.2.1
   #https://github.com/dart-lang/json_serializable
-  json_annotation: ^2.4.0
+  #  json_annotation: ^2.4.0
   #https://pub.dev/packages/esys_flutter_share
   esys_flutter_share: 1.0.2
   #https://pub.dev/packages/uni_links
