--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -57,6 +57,7 @@
 	<string>Please allow obtain speech recognition permission</string>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>audio</string>
 		<string>fetch</string>
 		<string>location</string>
 		<string>remote-notification</string>
