radar scan animation

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -190,6 +190,7 @@ flutter:
     - res/drawable/backup_notice_image.png
     - res/drawable/check_outline.png
     - res/drawable/hyn_wallet.png
+    - res/drawable/radar_scan.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
