--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -55,6 +55,8 @@
 	<string>Please allow obtain motion permission</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>Please allow obtain speech recognition permission</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Please allow obtain motion permission</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
