--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -201,6 +201,7 @@ flutter:
     - res/drawable/wifi_bg.png
     - res/drawable/wifi_close.png
     - res/drawable/checkin_history_progress.png
+    - res/drawable/invitation_bg.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
