--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -165,6 +165,7 @@ flutter:
     - res/eth/hyn_abi.json
     - res/drawable/safe_lock.png
     - res/drawable/map3_node_introduction.jpeg
+    - res/drawable/map3_node_introduction_en.jpg
     - res/drawable/discover_first_image.jpeg
     - res/drawable/eth_logo.png
     - res/drawable/hyn_logo.png
