--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,7 +92,7 @@ dependencies:
   carousel_pro: ^1.0.0
   web3dart: ^1.1.1
   bip39: ^1.0.3
-  intl: 0.15.8
+  intl: ^0.16.0
   webview_flutter: ^0.3.14+1
   pull_to_refresh: ^1.5.7
   carousel_slider: ^1.3.1
