--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,11 +93,12 @@ dependencies:
   web3dart: ^1.1.1
   bip39: ^1.0.3
   intl: ^0.16.0
-  webview_flutter: ^0.3.14+1
+  webview_flutter: ^0.3.18+1
   pull_to_refresh: ^1.5.7
   carousel_slider: ^1.3.1
   fake_cookie_manager: ^0.1.0
   loading: ^1.0.1
+  flutter_inappwebview: ^2.1.0+1
   #https://pub.flutter-io.cn/packages/flutter_bugly
   flutter_bugly: 0.2.7
 
