--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -192,6 +192,7 @@ flutter:
     - res/drawable/data_contribution_position.png
     - res/drawable/data_contribution_signal.png
     - res/drawable/data_contribution_check.png
+    - res/drawable/data_contribution_wallet_check.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
