--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,9 +106,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  build_runner: ^1.6.7
-  json_serializable: ^3.1.0
-  floor_generator: ^0.7.0
+  build_runner: ^1.7.2
+  json_serializable: ^3.2.4
+#  floor_generator: ^0.9.0
 
   #https://github.com/dart-lang/mockito
   mockito: ^4.0.0
