--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   #https://pub.dev/packages/package_info
   package_info: ^0.4.0+4
   #https://github.com/baseflowit/flutter-permission-handler
-  permission_handler: '^3.1.0'
+  permission_handler: ^4.0.0
   #https://pub.dev/packages/event_bus#-installing-tab-
   event_bus: ^1.1.0
   #https://pub.dev/packages/fluttertoast
@@ -100,6 +100,7 @@ dependencies:
   loading: ^1.0.1
   #https://pub.flutter-io.cn/packages/flutter_bugly
   flutter_bugly: 0.2.7
+  android_intent: 0.3.4+8
 
 
 dev_dependencies:
@@ -108,7 +109,7 @@ dev_dependencies:
 
   build_runner: ^1.7.2
   json_serializable: ^3.2.4
-#  floor_generator: ^0.9.0
+  #  floor_generator: ^0.9.0
 
   #https://github.com/dart-lang/mockito
   mockito: ^4.0.0
