--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,7 @@ dependencies:
   #https://pub.dev/packages/logger#-installing-tab-
   logger: ^0.7.0+2
   #https://pub.dev/packages/flutter_statusbarcolor#-installing-tab-
-  flutter_statusbarcolor: 0.2.1
+  flutter_statusbarcolor: ^0.2.3
   #https://github.com/dart-lang/json_serializable
   #  json_annotation: ^2.4.0
   #https://pub.dev/packages/esys_flutter_share
