delete auto generated file.

--- a/.gitignore
+++ b/.gitignore
@@ -87,5 +87,4 @@ apks
 .apk
 ios/Flutter/flutter_export_environment.sh
 *.sh
-*.sh
-ios/Flutter/flutter_export_environment.sh
+.flutter-plugins-dependencies
