--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   #https://github.com/flutterchina/dio
-  dio: ^3.0.3
+  dio: ^3.0.7
   #https://pub.dev/packages/package_info
   package_info: ^0.4.0+4
   #https://github.com/baseflowit/flutter-permission-handler
@@ -36,7 +36,7 @@ dependencies:
   #https://pub.dev/packages/event_bus#-installing-tab-
   event_bus: ^1.1.0
   #https://pub.dev/packages/fluttertoast
-  fluttertoast: ^3.1.0
+  fluttertoast: ^3.1.3
   #  flutter_webview_plugin: ^0.3.5
   #https://github:com/dnfield/flutter_svg:
   flutter_svg: ^0.13.0+2
@@ -51,13 +51,11 @@ dependencies:
   #https://pub.dev/packages/sqflite#-installing-tab-
   sqflite: ^1.1.5
   #https://pub.dev/packages/shared_preferences#-installing-tab-
-  shared_preferences: ^0.5.3+1
+  shared_preferences: ^0.5.6
   #https://pub.dev/packages/flutter_bloc
-  flutter_bloc: ^1.0.0
+  flutter_bloc: ^3.0.0
   #https://pub.dev/packages/equatable#-readme-tab-
-  equatable: ^0.2.6
-  #https://pub.dev/packages/flutter_bugly#-installing-tab-
-  #flutter_bugly: ^0.2.3+1
+  equatable: ^1.0.1
   #https://pub.dev/packages/logger#-installing-tab-
   logger: ^0.7.0+2
   #https://pub.dev/packages/flutter_statusbarcolor#-installing-tab-
@@ -84,7 +82,7 @@ dependencies:
   #https://pub.dev/packages/floor
   floor: ^0.8.0
   #https://pub.dev/packages/rxdart
-  rxdart: 0.22.2
+  rxdart: ^0.23.1
   #https://pub.dev/packages/url_launcher
   url_launcher: 5.1.2
   decimal: ^0.3.5
@@ -100,9 +98,9 @@ dependencies:
   loading: ^1.0.1
   flutter_inappwebview: ^2.1.0+1
   #https://pub.flutter-io.cn/packages/flutter_bugly
-  flutter_bugly: 0.2.7
-  android_intent: 0.3.4+8
-  app_settings: 3.0.0+1
+  flutter_bugly: ^0.2.7
+  android_intent: ^0.3.4
+  app_settings: ^3.0.0
 
 
 dev_dependencies:
