--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:networkSecurityConfig="@xml/network_security_config"
+        tools:replace="android:networkSecurityConfig"
         android:theme="@style/AppTheme">
         <activity
             android:name="org.hyn.titan.MainActivity"
@@ -83,6 +84,7 @@
                 android:resource="@xml/filepaths"
                 tools:replace="android:resource" />
         </provider>
+
 
     </application>
 </manifest>
