--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -213,6 +213,11 @@ flutter:
     - res/drawable/ic_business_time_switch_on.png
     - res/drawable/ic_business_time_switch_off.png
     - res/drawable/ic_business_time_add_custom.png
+    - res/drawable/ic_user_poi_category_name.png
+    - res/drawable/ic_user_poi_zip_code.png
+    - res/drawable/ic_user_poi_phone_num.png
+    - res/drawable/ic_user_poi_web_site.png
+    - res/drawable/ic_user_poi_business_time.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
