--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -221,6 +221,8 @@ flutter:
     - res/drawable/ic_user_poi_phone_num.png
     - res/drawable/ic_user_poi_web_site.png
     - res/drawable/ic_user_poi_business_time.png
+    - res/drawable/ic_confirm_button_right.png
+    - res/drawable/ic_confirm_button_error.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
